manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: korean-service
  namespace: webapp
spec:
  type: ClusterIP
  selector:
    app: korean
  ports:
  - port: 80
    targetPort: 3000
